# hue-codec

./: CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
docs/: comparison_output.txt  full_mapping.csv
env/: install_deps.sh  set_env_vars.sh  vcpkg_install.sh
env/ubuntu_22.04/: Dockerfile  install_deps.sh  set_env_vars.sh
env/vcpkg_alternatives/: vcpkg_commented.json  vcpkg_minimal.json  vcpkg_nvicodecs.json  vcpkg_vidcodecs.json
env/windows_10/: install_cuda.ps1  install_deps.ps1
include/: hue_codec.h
src/: common.h  example_frame.cpp  example_sensor.cpp  example_sequence.cpp
test/: benchmarks.cpp  common.h  comparison.cpp  interactive.cpp  tests.cpp  validation.cpp
test/ref/: rs-colorize.h
